# serverless-shinobi-engine

./: README.md
.github/workflows/: deploy.yml
frontend/: app.js  index.html  styles.css
headless-core/: CMakeLists.txt  main.cpp
